fix(grid): chaotic layout * Delete invaild left sidebar max-width. * Fix too narrow right sidebar width when tag-cloud is disabled or have   no content. * adjust max width in xl from 1536px to 1680px.

--- a/assets/scss/grid.scss
+++ b/assets/scss/grid.scss
@@ -2,12 +2,8 @@
     margin-left: auto;
     margin-right: auto;
 
-    .left-sidebar {
-        max-width: var(--left-sidebar-max-width);
-    }
-
     .right-sidebar {
-        max-width: var(--right-sidebar-max-width);
+        width: var(--right-sidebar-width);
 
         /// Display right sidebar when min-width: lg
         @include respond(lg) {
@@ -18,36 +14,31 @@
     &.extended {
         @include respond(md) {
             max-width: 1024px;
-            --left-sidebar-max-width: 25%;
-            --right-sidebar-max-width: 30%;
+            --right-sidebar-width: 30%;
         }
 
         @include respond(lg) {
             max-width: 1280px;
-            --left-sidebar-max-width: 20%;
-            --right-sidebar-max-width: 25%;
+            --right-sidebar-width: 25%;
         }
 
         @include respond(mlg) {
             max-width: 1280px;
-            --right-sidebar-max-width: 23%;
+            --right-sidebar-width: 23%;
         }
         @include respond(xl) {
-            max-width: 1536px;
-            --left-sidebar-max-width: 15%;
-            --right-sidebar-max-width: 23%;
+            max-width: 1680px;
+            --right-sidebar-width: 23%;
         }
     }
 
     &.compact {
         @include respond(md) {
-            --left-sidebar-max-width: 25%;
             max-width: 768px;
         }
 
         @include respond(lg) {
             max-width: 1024px;
-            --left-sidebar-max-width: 20%;
         }
 
         @include respond(xl) {
